[gd_scene load_steps=7 format=3 uid="uid://c2lkh31j4ejms"]

[ext_resource type="PackedScene" uid="uid://ybv6avhh5gpg" path="res://ui/menus/main_menu.tscn" id="1_djijo"]
[ext_resource type="Script" path="res://core/globals/ui.gd" id="1_f7xxx"]
[ext_resource type="PackedScene" uid="uid://m7neskqnriu1" path="res://ui/menus/defeat_dialog.tscn" id="2_kh7na"]
[ext_resource type="PackedScene" uid="uid://cdu67iwdtqt37" path="res://ui/menus/victory_dialog.tscn" id="3_71s0w"]
[ext_resource type="PackedScene" uid="uid://d0f83ufvlpsy" path="res://ui/menus/high_score_menu.tscn" id="5_wibis"]
[ext_resource type="PackedScene" uid="uid://hmua5ckodt8l" path="res://ui/menus/credits_menu.tscn" id="6_uacex"]

[node name="UI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_f7xxx")

[node name="DefeatDialog" parent="." instance=ExtResource("2_kh7na")]
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="VictoryDialog" parent="." instance=ExtResource("3_71s0w")]
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="MainMenu" parent="." instance=ExtResource("1_djijo")]
process_mode = 3

[node name="HighScoreMenu" parent="." instance=ExtResource("5_wibis")]
visible = false

[node name="CreditsMenu" parent="." instance=ExtResource("6_uacex")]
visible = false
